<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoInLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/runus_logo"
        app:layout_constraintBottom_toTopOf="@+id/LoginText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="75dp"
        android:text="아이디"
        app:layout_constraintLeft_toLeftOf="@id/IdInput"
        app:layout_constraintTop_toBottomOf="@id/logoInLogIn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/IdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_shape_for_field"
        android:fontFamily="@font/pretendardregular"
        android:hint="아이디를 입력해 주세요."
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginText" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pretendardregular"
        android:text="비밀번호"
        app:layout_constraintBottom_toTopOf="@id/PasswordInput"
        app:layout_constraintLeft_toLeftOf="@id/PasswordInput" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_shape_for_field"
        android:fontFamily="@font/pretendardregular"
        android:hint="비밀번호를 입력해 주세요."
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IdInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_shape_green"
        android:fontFamily="@font/pretendardregular"
        android:text="로그인"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordInput" />

    <TextView
        android:id="@+id/SignInMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/pretendardregular"
        android:text="아직 회원이 아니신가요? 회원가입"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginBtn" />

    <TextView
        android:id="@+id/ForgotIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:fontFamily="@font/pretendardregular"
        android:text="아이디를 잊어버리셨나요? 아이디 찾기"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IdInput" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:text="비밀번호를 잊어버리셨나요? 비밀번호 찾기"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>