...
        android:layout_marginTop="25dp"
        android:fontFamily="@font/pretendardregular"
        android:text="오늘의 운동을 시작해 보세요!"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/announcementText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/announcementText"
...
