...
    <!--        android:background="@drawable/round_shape_green"-->
    <!--        android:fontFamily="@font/pretendardregular"-->
    <!--        android:gravity="center"-->
    <!--        android:text="모두 보기"-->
    <!--        android:textColor="#FFFFFF"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/badgeScrollViewWrapperView"-->
    <!--        app:layout_constraintRight_toLeftOf="@id/logoutBtn"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/InfoText" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
...
